Security Patch for Various Aspects
- Bumped Chart version to 1.0.13 (since we both forgot it :P)
- Moved account data from ConfigMap to Secret, supporting an existing secret to provide `username`, `password` and `token`
- Moved server password from ConfigMap to Secret, supporting an existing secret to provide `game_password`
- Moved rcon password from ConfigMap to Secret, supporting an existing secret to provide `rcon.password`
- Moved account data from `server_settings.` to `account.` in values.yaml
- Moved server password from `server_settings.` to `serverPassword.` in values.yaml
- Added `account.accountSecret` field to values.yaml
- Added `rcon.passwordSecret` field to values.yaml
- Added `serverPassword.passwordSecret` field to values.yaml
- Set `spec.template.spec.hostNetwork` to false if the Service is different from a NodePort due to security best practices
- Added a check for annotations inside values.yaml to avoid creating an empty `metadata.annotations` inside the Factorio Service
- Removed `rconpw` from the ConfigMap and moved it to a dedicated Secret
- Removed account data and game password from server-settings.json, adding them to said JSON via the InitContainer
- Updated mod-downloader-configmap.yaml to fetch account data from Secrets

--- a/charts/factorio-server-charts/templates/mod-downloader-configmap.yaml
+++ b/charts/factorio-server-charts/templates/mod-downloader-configmap.yaml
@@ -40,11 +40,11 @@ data:
     }
     function downloadofficial() {
         if [[ -z ${USERNAME:-} ]]; then
-          USERNAME="$(jq -j ".username" "/factorio/configs/server-settings.json")"
+          USERNAME="$(cat /account/username)"
         fi
 
         if [[ -z ${TOKEN:-} ]]; then
-          TOKEN="$(jq -j ".token" "/factorio/configs/server-settings.json")"
+          TOKEN="$(cat /account/token)"
         fi
 
         if [[ -z ${USERNAME:-} ]]; then
@@ -106,6 +106,6 @@ data:
     {{- end }}
 
 
-    
 
-    
+
+
